--- a/todo.txt
+++ b/todo.txt
@@ -1,12 +1,7 @@
-name: remote friendly
-add venue view: place to add a venue and/or a city - here
-    if venue then this, else go to add venue view
-    form displays with more options to pre-select
-
-log in view
-register view
-shop view
-update post view
+1. frontend
+    store view
+    dashboard view
+        update post view
 
 2. backend setup and connection
 3. API's needed:
