city view click added

--- a/todo.txt
+++ b/todo.txt
@@ -4,5 +4,9 @@
         update post view
 
 2. backend setup and connection
+    - create tables
+    - connect forms 
+    - create logic for aggregating results
+
 3. API's needed:
     - google maps
