--- a/todo.txt
+++ b/todo.txt
@@ -4,9 +4,11 @@
 
 2. backend setup and connection
     go through and update the __init__.py files one by one
-    - create server
-    - create database
-    - create routes
+    - login
+        - create base users route... here 
+        - create login route - done
+        - create logout route
+        - create /api/user route (see other projects)
     - create tables
     - connect forms 
     - create logic for aggregating results
