--- a/todo.txt
+++ b/todo.txt
@@ -4,13 +4,9 @@
 
 2. backend setup and connection
     go through and update the __init__.py files one by one
-    - login
-        - create base users route... here 
-        - create login route - done
-        - create logout route
-        - create /api/user route (see other projects)
+        - authenticate forms (login and register)
     - create tables
-    - connect forms 
+    - connect forms (answers)
     - create logic for aggregating results
 
 3. API's needed:
