--- a/todo.txt
+++ b/todo.txt
@@ -4,7 +4,13 @@
 
 2. backend setup and connection
     - create tables and populate
-        - reviews and individual page
+            
+        - reviews - set the table to questions with numbers as answers 
+            - seed db -- check chat gpt last answer -- here!
+            - send data via add new venue
+            - add new fields to Venues table that will show the aggregate of all reviews for that venue
+            - create way for 2nd user to add review for same location
+        --individual page
         - comments
     - connect forms (answers)
     - create logic for aggregating results
