--- a/todo.txt
+++ b/todo.txt
@@ -5,9 +5,8 @@
 2. backend setup and connection
     - create tables and populate
             
-        - reviews - set the table to questions with numbers as answers 
-            -- need to test the venue, user, reviews, comment routes (use postman or similar)
-            - send data via add new venue
+        - reviews
+            - send data via add new venue -- here
             - add new fields to Venues table that will show the aggregate of all reviews for that venue
             - create way for 2nd user to add review for same location
         --individual page
