--- a/todo.txt
+++ b/todo.txt
@@ -4,9 +4,7 @@
 
 2. backend setup and connection
     - create tables and populate
-            
-        - reviews
-            - send data via add new venue -- here
+                here!
             - add new fields to Venues table that will show the aggregate of all reviews for that venue
             - create way for 2nd user to add review for same location
         --individual page
