--- a/todo.txt
+++ b/todo.txt
@@ -6,6 +6,7 @@
     - create tables and populate
                 here!
             - add new fields to Venues table that will show the aggregate of all reviews for that venue
+            - update store page to reflect aggregated data
             - create way for 2nd user to add review for same location
         --individual page
         - comments
