--- a/todo.txt
+++ b/todo.txt
@@ -4,7 +4,7 @@
 
 2. backend setup and connection
     - create tables and populate
-                here!
+                here! here again!!
                  -- currently in the sendToDataBase fucnction in addFormContext
             -- storeSummaryIcons
                 // change been here to reflect if there has been a review filled out for the user or not,
@@ -29,3 +29,6 @@
     - if view venue, log in, and then view venue again state does not update to see that user has left review or not
     - set up history array so that when a login click happens and a successful login occurs it takes the user back to the page they came from
     - clicking an answer in the form more than once will append a new value instead of overwriting the first value
+    - initial load still hows totals as 4500%.. need to run the aggregate results function sometime before a new venue is added 
+    - each venue is getting a new aggregate upon running of function...
+
