--- a/todo.txt
+++ b/todo.txt
@@ -4,12 +4,11 @@
 
 2. backend setup and connection
     - create tables and populate
-                -- adding jwt logic etc - see recent chatgpt about login jwt etc... here 
-                    -- need to update all routes that should be protected with @token_required
-                    -- create delete review route and continue... - here
                  -- currently in the sendToDataBase fucnction in addFormContext
                     -- test:
                         -- add new review for new venue
+                            -- something is getting crossed, when clicking on a new venue the state does not change but remains set on the previous venue clicked
+                            -- new review agg is same as perky beans agg, id?
                         -- edit new review
                         -- add new review as new user for new venue
                         -- add new review as new user for a different venue
@@ -24,8 +23,8 @@
             - create way for 2nd user to add review for same location
         --individual page
         - comments
-    - connect forms (answers)
-    - create logic for aggregating results
+    - dashboard
+        - create delete review route
 
 3. API's needed:
     - google maps
@@ -39,4 +38,5 @@
     - clicking an answer in the form more than once will append a new value instead of overwriting the first value
     - initial load still hows totals as 4500%.. need to run the aggregate results function sometime before a new venue is added 
     - each venue is getting a new aggregate upon running of function...
+    - check sum logic
 
