--- a/todo.txt
+++ b/todo.txt
@@ -8,6 +8,7 @@
                     -- test:
                         -- add new review for new venue
                             -- new review agg is same as perky beans agg, id? -- here, see chatgpt suggestion and refactor
+                                -- run all code by chatgpt to check it...
                             -- in venues all ratings are 1
                         -- edit new review
                         -- add new review as new user for new venue
