--- a/todo.txt
+++ b/todo.txt
@@ -8,7 +8,7 @@
                     -- test:
                         -- add new review for new venue
                             -- new review agg is same as perky beans agg, id? -- here, see chatgpt suggestion and refactor
-                                -- error on adding review to user -- here
+                                -- error in aggregateResults == here 
                             -- in venues all ratings are 1
                         -- edit new review
                         -- add new review as new user for new venue
