--- a/todo.txt
+++ b/todo.txt
@@ -4,9 +4,9 @@
 
 2. backend setup and connection
                     -- test:
-                        -- edit new review
-                        -- add new review as new user for new venue
-                        -- add new review as new user for a different venue
+                        -- add new review as new user for a different venue -- here
+                            -- need to add state for when "leave a review" is clicked
+
 
             -- storeSummaryIcons
                 // change been here to reflect if there has been a review filled out for the user or not,
@@ -26,12 +26,11 @@
 
 4. Bugs 
     - login session is deleted after a refresh or navigating away from page
-    - after adding new venue and review the form is not cleared
+    - after adding new venue and review the form is not cleared -- unless a refresh is made
     - logic for if venue has already been added
     - if view venue, log in, and then view venue again state does not update to see that user has left review or not
     - set up history array so that when a login click happens and a successful login occurs it takes the user back to the page they came from
     - clicking an answer in the form more than once will append a new value instead of overwriting the first value
     - initial load still hows totals as 4500%.. need to run the aggregate results function sometime before a new venue is added 
     - each venue is getting a new aggregate upon running of function...
-    - check sum logic
 
