--- a/todo.txt
+++ b/todo.txt
@@ -3,25 +3,9 @@
         update post view
 
 2. backend setup and connection
-                    -- test:
-                        -- add new review as new user for a different venue
-                            -- need to add state for when "leave a review" is clicked
-                                -- add top portion of form with filled in data
-                                    - venue name
-                                    - address
-                                    - image?
-                                -- add form details
-                                -- add summary form
-
-
-            -- storeSummaryIcons
-                // change been here to reflect if there has been a review filled out for the user or not,
-                if not then ask if they would like to reivew
-                // change default heart color to the result of the sum field if the user has a review for this venue
-            - update store page to reflect aggregated data
+            - change default heart color to the result of the sum field if the user has a review for this venue - here!
             - change icons on hover and add onClick to allow update of reviews if logged and have reviewed
             - change review to allow null values
-            - create way for 2nd user to add review for same location
         --individual page
         - comments
     - dashboard
@@ -39,4 +23,5 @@
     - clicking an answer in the form more than once will append a new value instead of overwriting the first value
     - initial load still hows totals as 4500%.. need to run the aggregate results function sometime before a new venue is added 
     - each venue is getting a new aggregate upon running of function...
+    - rating does not round but can be displayed as 33.33333 etc
 
