--- a/todo.txt
+++ b/todo.txt
@@ -3,14 +3,7 @@
         update post view
 
 2. backend setup and connection
-                - pull comment from the review and add to the top of the page -- here!!
-                    - will need the comment from review, date and user avatar
-                    - current errors
-                        - when not logged in then avatar changing colors even though saved in db -- here
-                - avatar is now not appearing in the comment section
-            - create default avatar for users
-            - bring in the avatar to the been here page
-                - might have to add user details to the venue upon submit of a review 
+            - on click of icon or leave review allow to leave comment or review right there without leaving the page
             - change icons on hover and add onClick to allow update of reviews if logged and have reviewed
             
     - dashboard
@@ -27,4 +20,7 @@
     - clicking an answer in the form more than once will append a new value instead of overwriting the first value
     - initial load still hows totals as 4500%.. need to run the aggregate results function sometime before a new venue is added 
     - rating does not round but can be displayed as 33.33333 etc
+    - create new user, color is asssigned, but next click show a different color
+    - a new review for an existing venue first time does not save the comment to the db, editing the review will save the comment
+    - need to pull in the comment to the form when editing
 
