update review simple form done

--- a/todo.txt
+++ b/todo.txt
@@ -21,9 +21,11 @@
     - clicking an answer in the form more than once will append a new value instead of overwriting the first value
     - initial load still hows totals as 4500%.. need to run the aggregate results function sometime before a new venue is added 
     - rating does not round but can be displayed as 33.33333 etc
-    - create new user, color is asssigned, but next click show a different color
+    - create new user, color is assigned, but next click show a different color
     - a new review for an existing venue first time does not save the comment to the db, editing the review will save the comment
     - need to pull in the comment to the form when editing
     - only show review section on store page if there is a review 
-    - wait to pass over any reivew without xcom and show the first comment with an xcom value if any
+    - wait to pass over any review without xcom and show the first comment with an xcom value if any
+    - after adding several simple rate reviews the it seems to update the wrong component or wrong line
+        - veggie and alcohol are somehow connected...
 
