--- a/todo.txt
+++ b/todo.txt
@@ -9,9 +9,12 @@
         - if current user has a comment then display it on top with the choice to delete or edit, 
         else display the newest comment with a choice to add their overwriting
         - turn edit review link into edit comment and change view to show input textarea with previous comment loaded
+    - change color of filter icon to the aggregate review color
+    - when clicking on filter sort list by those venues that have a rating for that filter
 
 3. API's needed:
     - google maps
+        - add click event to icon
 
 4. Bugs 
     - after adding new venue and review the form is not cleared -- unless a refresh is made
