--- a/todo.txt
+++ b/todo.txt
@@ -14,7 +14,15 @@
 
 3. API's needed:
     - google maps
-        - add click event to icon
+    - setup auto complete
+    - importing data from json?
+        - what do I need from api?
+            - lng, lat
+            - auto fill form 
+            - map
+            - images
+                https://maps.googleapis.com/maps/api/place/js/PhotoService.GetPhoto
+                https://console.cloud.google.com/apis/library/places.googleapis.com?project=bootcamp-361917
 
 4. Bugs 
     - after adding new venue and review the form is not cleared -- unless a refresh is made
