--- a/todo.txt
+++ b/todo.txt
@@ -15,6 +15,7 @@
 3. API's needed:
     - google maps
     - setup auto complete
+        - bug 'google api already presented'
     - importing data from json?
         - what do I need from api?
             - lng, lat
