added hours to home page

--- a/todo.txt
+++ b/todo.txt
@@ -14,31 +14,12 @@
 
 3. API's needed:
     - google maps
-    - setup auto complete
-        - need to save data approrpriately
-        data needed:
-            - address_components[3].long_name (city name)
-            - formatted_address (full address)
-            - geometry.viewport.Jh.hi (longitude)
-            - geometry.viewport.Zh.hi (latitude)
-            - name
-            - opening_hours.weekday_text
-            - url (maps location url)
-            - website
-            - where to find images? see link below...
-                - photos[0].raw_reference.fife_url (need 0-5)
-
-        -- next: check what formData is saving, what how do I need it to save? update for image changes?
-            - on backend, create route for single image, on frontend fetch the image -- Here!!
-
-    - importing data from json?
-        - what do I need from api?
-            - lng, lat
-            - auto fill form 
-            - map
-            - images
-                https://maps.googleapis.com/maps/api/place/js/PhotoService.GetPhoto
-                https://console.cloud.google.com/apis/library/places.googleapis.com?project=bootcamp-361917
+        - map data 
+            - home page details, hours etc
+            - store page
+                - image 
+                - map link
+                - hours
 
 4. Bugs 
     - after adding new venue and review the form is not cleared -- unless a refresh is made
@@ -53,6 +34,7 @@
     - need to pull in the comment to the form when editing
     - only show review section on store page if there is a review 
     - wait to pass over any review without xcom and show the first comment with an xcom value if any
+    - review comments stopped appearing...
          
 
 
