audit of currentVenue

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 1. frontend
     - places page
         - create city database
+            - audit places that use currentVenue 
             - need to get places ID to be the unique value in placeCard, set it to something and keep currentVenue as is... 2nd route to handle when placeId is used?
             issue is that there can be multiple shops with the same name
         - send name of city to city db on submit, count as well? logic for state?
