--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,7 @@
     - places page
         - on fetch req in Main: need to change req to only get results from currentCity, pass req currentCity and 
         adjust route on backend -- here!     
-        - fix so that city returns despite order of data from api
+        - fix so that city returns despite order of data from api -- because counties are being returned right now
     - add logic to comment section
         - if current user has a comment then display it on top with the choice to delete or edit, 
         else display the newest comment with a choice to add their overwriting
