--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,6 @@
 1. frontend
-    - places page
-        - in useEffect in main, issue fetching venue data -- here!     
-        - fix so that city returns despite order of data from api -- because counties are being returned right now
+    - places page   
+        - fix so that city returns despite order of data from api -- because counties are being returned right now - here!
     - add logic to comment section
         - if current user has a comment then display it on top with the choice to delete or edit, 
         else display the newest comment with a choice to add their overwriting
