--- a/todo.txt
+++ b/todo.txt
@@ -1,8 +1,7 @@
 1. frontend
     - places page   
-        - can't add 2 venues in a row, or update an existing venue form -- here!
-            - after selecting a venue in the venue form, if you erase and select a new one then the first data is carried over to the next step
-        - style of places page
+        - style of places page - here!
+        - add scroll up to top of page on all pages...
     - add logic to comment section
         - if current user has a comment then display it on top with the choice to delete or edit, 
         else display the newest comment with a choice to add their overwriting
