--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,12 @@
 1. frontend
     - add logic to comment section -- here!
+        - what issues are outstanding with comment section?
+            - while logged out
+                - with comments
+            - while logged in
+                - with own comment
+                - with other user comment
+                - with no comment
         - if current user has a comment then display it on top with the choice to delete or edit, 
         else display the newest comment with a choice to add their overwriting
         - turn edit review link into edit comment and change view to show input textarea with previous comment loaded
