--- a/todo.txt
+++ b/todo.txt
@@ -1,9 +1,7 @@
 1. frontend
     - add logic to comment section -- here!
         - what issues are outstanding with comment section?
-            -- see Comment.jsx
             - while logged out -- here!
-                - with comments
                 - without comments
             - while logged in
                 - with own comment
@@ -11,7 +9,7 @@
                 - with no comment
         - if current user has a comment then display it on top with the choice to delete or edit, 
         else display the newest comment with a choice to add their overwriting
-        - turn edit review link into edit comment and change view to show input textarea with previous comment loaded
+        - turn edit link to change view to show input textarea with previous comment loaded for edit comment or the textarea fresh for a new comment
     - add filter logic
         - change color of filter icon to the aggregate review color
         - when clicking on filter sort list by those venues that have a rating for that filter
