--- a/todo.txt
+++ b/todo.txt
@@ -2,7 +2,10 @@
     - add logic to comment section -- here!
         - what issues are outstanding with comment section?
             - see notes in Comment.jsx -- here
-                - want the two links to be on the same level but doing this has created other issues -- here!
+                - see 'issue here' places in Comment.jsx -- here!
+                - want the two links to be on the same level but doing this has created other issues
+                - want to current users comment to always be at the top
+                - want the edit comment link to always be with the current users comment
             - while logged out -- here!
                 - without comments
                 - with comments
